post list desktop

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,7 @@ html {
     overflow-y: scroll ! important;
 }
 
-body {
-  background: repeating-linear-gradient(
-    to right,
-    #D5DBDF,
-    #D5DBDF 30px,
-    #EAECEF 30px,
-    #EAECEF 60px
-  );
+a {
+  color: inherit;
+  text-decoration: none;
 }
